@@ -1,3 +1,11 @@
+2007-05-28  Richard Dale  <rdale@foton.es>
+
+	* Further simplified the marshalling of primitive reference types. As
+	  a pointer the the value on the C# stack is copied to the smoke stack 
+	  before the method call, the value after the method call doesn't need
+	  to be copied back.
+	* Added a marshaller for 'short&' and 'short*' arg types
+
 2007-05-27  Arno Rehn  <arno@arnorehn.de>
 
 	* Removed the redundant stuff for ref arguments again and implemented them
